SDIT-2918 Pass start date through to the allocation migration

--- a/server/views/pages/allocations/allocationsMigration.njk
+++ b/server/views/pages/allocations/allocationsMigration.njk
@@ -121,6 +121,13 @@
                             class="govuk-!-margin-left-2">{{ u.filterCourseActivityId }}</span>
                     </div>
                   {% endif %}
+                  {% if u.filterActivityStartDate %}
+                    <div class="govuk-grid-column-full">
+                      <span class="govuk-label--s">Course Activity Start Date:</span>
+                      <span data-qa="filterActivityStartDate"
+                            class="govuk-!-margin-left-2">{{ u.filterActivityStartDate }}</span>
+                    </div>
+                  {% endif %}
                 </div>
               </div>
             {% endset %}
