--- a/server/views/pages/allocations/startAllocationsMigrationPreview.njk
+++ b/server/views/pages/allocations/startAllocationsMigrationPreview.njk
@@ -70,6 +70,7 @@
 
                     {{ summaryRow(form.prisonId, "Prison code", summaryRows, "prison-id") }}
                     {{ summaryRow(form.courseActivityId, "Single course activity to migrate", summaryRows, "course-activity-id") }}
+                    {{ summaryRow(form.activityStartDate, "The date activities will start in DPS", summaryRows, "activity-start-date") }}
 
                     {{ govukSummaryList({
                         rows: summaryRows
