minor improvements to the text for visit migrations

--- a/server/views/pages/visits/addRoomMapping.njk
+++ b/server/views/pages/visits/addRoomMapping.njk
@@ -34,7 +34,7 @@
 
                     {{ govukInput({
                     label: {
-                    text: "Enter the VSIP room description",
+                    text: "Enter the DPS room description",
                     classes: "govuk-label--x",
                     isPageHeading: false
                     },
