--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -63,7 +63,7 @@
             text: "NOMIS description"
             },
             {
-            text: "VSIP description"
+            text: "DPS description"
             },
             {
             text: "Open"
