--- a/server/views/pages/visits/visitsMigrationFailures.njk
+++ b/server/views/pages/visits/visitsMigrationFailures.njk
@@ -73,7 +73,7 @@
             rows: rows
           }) }}
         {% else %}
-          <p data-qa=no-failures class="govuk-body">There are no failuresures still waiting to be resolved</p>
+          <p data-qa=no-failures class="govuk-body">There are no failures still waiting to be resolved</p>
         {% endif %}
 
         </div
