--- a/server/views/pages/visitslots/startVisitslotsMigrationConfirmation.njk
+++ b/server/views/pages/visitslots/startVisitslotsMigrationConfirmation.njk
@@ -1,33 +1,33 @@
 {% extends "../../partials/layout.njk" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
-{% set pageTitle = applicationName + " - Corporate migration started" %}
-{% set backLinkHref = "/corporate-migration" %}
+{% set pageTitle = applicationName + " - Visit Time Slots migration started" %}
+{% set backLinkHref = "/visitslots-migration" %}
 
 {% block content %}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Corporate migration started</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Visit Time Slots migration started</h1>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         {% set html %}
         <div id="confirmationMessage">
           Migration id: <strong>{{form.migrationId}}</strong><br/>
-          Estimated number of Corporate entities to be migrated: <strong>{{form.estimatedCount}}</strong><br/>
-        </div>  
+          Estimated number of Visit Time Slots entities to be migrated: <strong>{{form.estimatedCount}}</strong><br/>
+        </div>
         {% endset %}
 
         {{ govukPanel({
-          titleText: "Corporate migration has successfully started",
+          titleText: "Visit Time Slots migration has successfully started",
           html: html
         }) }}
-      </div>  
+      </div>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <a data-qa="details-link" href="/corporate-migration/details?migrationId={{form.migrationId}}">View migration status</a>
+        <a data-qa="details-link" href="/visitslots-migration/details?migrationId={{form.migrationId}}">View migration status</a>
       </div>
     </div>
   </main>
