SDIT-3167: Remove app-container as now removed from template

--- a/server/views/pages/movements/startMovementsMigrationConfirmation.njk
+++ b/server/views/pages/movements/startMovementsMigrationConfirmation.njk
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <main class="app-container govuk-body">
+  <main class="govuk-body">
     <div class="govuk-width-container">
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Temporary Absences migration started</h1>
     </div>
