--- a/server/views/pages/visits/roomMappingPrison.njk
+++ b/server/views/pages/visits/roomMappingPrison.njk
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div class="app-container govuk-body">
+<div class="govuk-body">
     {% if errors.length > 0 %}
     {{ govukErrorSummary({
     titleText: 'There is a problem',
