--- a/server/views/pages/contactperson/profiledetails/contactPersonProfileDetailsMigrationDetails.njk
+++ b/server/views/pages/contactperson/profiledetails/contactPersonProfileDetailsMigrationDetails.njk
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-  <main class="app-container govuk-body">
+  <main class="govuk-body">
     <div class="govuk-width-container">
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Contact Person Profile Details migration details</h1>
     </div>
