--- a/server/views/pages/movements/startMovementsMigration.njk
+++ b/server/views/pages/movements/startMovementsMigration.njk
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-  <main class="app-container govuk-body">
+  <main class="govuk-body">
     {% if errors.length > 0 %}
     {{ govukErrorSummary({
         titleText: 'There is a problem',
