--- a/server/views/pages/visitbalance/visitBalanceMigrationFailures.njk
+++ b/server/views/pages/visitbalance/visitBalanceMigrationFailures.njk
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-  <main class="app-container govuk-body">
+  <main class="govuk-body">
     <div class="govuk-width-container">
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Visit balance migration failures</h1>
       <div class="govuk-grid-row">
