--- a/server/views/pages/visits/addRoomMapping.njk
+++ b/server/views/pages/visits/addRoomMapping.njk
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<div class="app-container govuk-body">
+<div class="govuk-body">
 
     {% if errors.length > 0 %}
     {{ govukErrorSummary({
