SDIT-3196 Official Visits

--- a/server/views/pages/officialvisits/startOfficialvisitsMigrationPreview.njk
+++ b/server/views/pages/officialvisits/startOfficialvisitsMigrationPreview.njk
@@ -30,7 +30,7 @@
                     {% if form.estimatedCount %}
                         {% set html %}
                             <p class="govuk-notification-banner__heading" id="estimateSummary">
-                                Estimated number of Person entities to be migrated: {{ form.estimatedCount }}
+                                Estimated number of Visit entities to be migrated: {{ form.estimatedCount }}
                             </p>
                         {% endset %}
 
